# Watcher

./: .env.example  .gitignore  AGENTS.md  DESIGN-SPEC.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: f08a4a90af44_initial_schema.py
apps/api/: __init__.py  app.py
apps/api/audit/: __init__.py  log.py
apps/api/classifier/: __init__.py  prompt.py  provider.py  service.py  types.py
apps/api/control_chat/: __init__.py  state.py  tokens.py
apps/api/core/: __init__.py  config.py  policy.py
apps/api/db/: __init__.py  base.py  models.py  repository.py
apps/api/destinations/: __init__.py  delivery.py  recipes.py
apps/api/identity/: __init__.py  models.py  resolver.py
apps/api/ingestion/: __init__.py  parser.py  ports.py  router.py  security.py  service.py
apps/api/media/: __init__.py  pipeline.py  ports.py
apps/api/orchestration/: __init__.py  ports.py  queue.py  worker.py
apps/api/rules/: __init__.py  engine.py  models.py
apps/api/schemas/: __init__.py  classification.py  common.py  enums.py  message.py
apps/api/tests/: fakes.py  test_audit.py  test_classifier.py  test_control_chat.py  test_db.py  test_destinations.py  test_golden_set.py  test_identity.py  test_ingestion_service.py  test_media.py  test_orchestration.py  test_parser.py  test_policy.py  test_queue.py  test_rules.py  test_schemas.py  test_security.py  test_webhook.py
apps/control-page/: README.md  design-tokens.css
docs/: DECISIONS.md  ROADMAP.md  build-spec-addendum.md
